added favicon to the pages

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"> </script>
     <link rel="stylesheet" href="index.css">
     <title>MyHealthTrail</title>
+    <link rel="icon" type="image/x-icon" href="img/webicon.ico">
 </head>
 <body>
   <section id="Home" class="d-flex align-items-center">
