--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       crossorigin="anonymous"
     ></script>
     <title>MyHealthTrail</title>
+    <link rel="icon" type="image/x-icon" href="img/webicon.ico">
   </head>
 
   <body>
