--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@
     <script src="https://kit.fontawesome.com/kitcode.js" crossorigin="anonymous"> </script>
     <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"> </script>
     <title>MyHealthTrail</title>
+    <link rel="icon" type="image/x-icon" href="img/webicon.ico">
 </head>
 <body>
    
