--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,7 @@
     <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"> </script>
     <link rel="stylesheet" href="blog.css">
     <title>MyHealthTrail</title>
+    <link rel="icon" type="image/x-icon" href="img/webicon.ico">
 </head>
 <body>
      <nav class="navbar navbar-expand-lg fixed-top">
