added logo to the nav

--- a/about.html
+++ b/about.html
@@ -21,13 +21,15 @@
 <body>
   <section id="Home" class="d-flex align-items-center">
     <div class="container">
-      <h1>Welcome to MyHealthTrail</h1>
-      <h2>We are a team of Specialized Doctors.<br>"Your devotion and care bring healing, comfort and hope."</h2>
+      <!-- <h1>Welcome to MyHealthTrail</h1> -->
+      <!-- <h2>We are a team of Specialized Doctors.<br>"Your devotion and care bring healing, comfort and hope."</h2> -->
       <a href="about us" class="btn-get-started scrollto">Learn more</a>
 
       <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">MyHealthTrail</a>
+        <div class="logo_div">
+          <a class="navbar-brand" href="index.html"><img class="logo_img" src="img/logo-new.png" alt="logo"></a>
+        </div>
         <button
           class="navbar-toggler"
           type="button"
@@ -68,6 +70,12 @@
     </nav>
  
 <!-----------------------------ABOUT SECTION----------------->
+<section id="Home" class="d-flex align-items-center">
+  <div class="container">
+    <h1>Welcome to MyHealthTrail</h1>
+    <h2>We are a team of Specialized Doctors.<br>"Your devotion and care bring healing, comfort and hope."</h2>
+    <a href="about us" class="btn-get-started scrollto">Learn more</a>
+
   </section>
   <section id="about" class="about">
     <div class="container" data-aos="fade-up">
