--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">MyHealthTrail</a>
+        <div class="logo_div">
+          <a class="navbar-brand" href="index.html"><img class="logo_img" src="img/logo-new.png" alt="logo"></a>
+        </div>
         <button
           class="navbar-toggler"
           type="button"
