added blurry background

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <!-- HERO SECTION -->
     <div class="row hero d-sm">
-      <div class="col-sm-6">
+      <div class="col-sm-6 animate_div">
         <h2>👋 Welcome to MyHealthTrail</h2>
         <div id="slideset1">
           <div>
