--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
     <div class="doctors">
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/doctor (1).jpg"/>
+  <img class="doc_img" src="images/doctor (1).jpg"/>
 </div>
 <div class="second col-sm-4">
   <p>Helen Brown</p>
@@ -79,7 +79,7 @@
 </div>
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/doctor (2).jpg" />
+  <img class="doc_img" src="images/doctor (2).jpg" />
 </div>
 <div class="second col-sm-4">
   <p>Kacy Andrews</p>
@@ -93,7 +93,7 @@
 </div>
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/doctor male.jpg" />
+  <img class="doc_img" src="images/doctor male.jpg" />
 </div>
 <div class="second col-sm-4">
   <p>Alex Davis</p>
@@ -108,7 +108,7 @@
 </div>
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/doctor 3.jpg"/>
+  <img class="doc_img" src="images/doctor 3.jpg"/>
 </div>
 <div class="second col-sm-4">
   <p>Sally Adams</p>
@@ -122,7 +122,7 @@
 </div>
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/portrait-doctor.jpg" />
+  <img class="doc_img" src="images/portrait-doctor.jpg" />
 </div>
 <div class="second col-sm-4">
   <p>Lee Sung</p>
@@ -137,7 +137,7 @@
 </div>
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/portrait-smiling-male-doctor.jpg" />
+  <img class="doc_img" src="images/portrait-smiling-male-doctor.jpg" />
 </div>
 <div class="second col-sm-4">
   <p>Christopher Essen</p>
@@ -151,7 +151,7 @@
 </div>
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/doctor-with-co-workers-analyzing-x-ray.jpg" />
+  <img class="doc_img" src="images/doctor-with-co-workers-analyzing-x-ray.jpg" />
 </div>
 <div class="second col-sm-4">
   <p>Jude walker</p>
@@ -165,7 +165,7 @@
 </div>
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/i-love-my-job-so-much.jpg" />
+  <img class="doc_img" src="images/i-love-my-job-so-much.jpg" />
 </div>
 <div class="second col-sm-4">
   <p>Dywane Thompson</p>
@@ -180,7 +180,7 @@
 </div>
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/young-lady-looking-pointing-copy-space.jpg" />
+  <img class="doc_img" src="images/young-lady-looking-pointing-copy-space.jpg" />
 </div>
 <div class="second col-sm-4">
   <p>Alexis Bush</p>
@@ -195,7 +195,7 @@
 </div>
 <div class="doc row">
 <div class="col-sm-4">
-  <img src="images/professional-doctor-office.jpg" />
+  <img class="doc_img" src="images/professional-doctor-office.jpg" />
 </div>
 <div class="second col-sm-4">
   <p>Kim Sang Sung</p>
