--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
 <div class="second col-sm-4">
   <p>Helen Brown</p>
   <p>Nutritionist</p>
-  <p>hgfhgfhjfhfhffgh</p>
+  <p>Experience: 5years</p>
 </div>
 <div class="third col-sm-4">  
    <p>Consultation time: 8am to 12pm</p>
@@ -84,7 +84,7 @@
 <div class="second col-sm-4">
   <p>Kacy Andrews</p>
   <p>Medical Doctor</p>
-  <p>hgfhgfhjfhfhffgh</p>
+  <p>Experience: 8years</p>
 </div>
 <div class="third col-sm-4">
   <p>Consultation time: 12pm to 2pm</p>
@@ -99,7 +99,7 @@
 <div class="second col-sm-4">
   <p>Alex Davis</p>
   <p>Nutritionist</p>
-  <p>hgfhgfhjfhfhffgh</p>
+  <p>Experience: 10years</p>
 </div>
 <div class="third col-sm-4">
   <p>Consultation time: 2pm to 4pm</p>
@@ -113,8 +113,8 @@
 </div>
 <div class="second col-sm-4">
   <p>Sally Adams</p>
-  <p>Dietician</p>
-  <p>hgfhgfhjfhfhffgh</p>
+  <p>Dietitian</p>
+  <p>Experience: 4years</p>
 </div>
 <div class="third col-sm-4">
   <p>Consultation time: 4pm to 6pm</p>
@@ -129,7 +129,7 @@
 <div class="second col-sm-4">
   <p>Lee Sung</p>
   <p>Medical Doctor</p>
-  <p>hgfhgfhjfhfhffgh</p>
+  <p>Experience: 10years</p>
 </div>
 <div class="third col-sm-4">
   <p>Consultation time: 6pm to 8pm</p>
@@ -143,8 +143,8 @@
 </div>
 <div class="second col-sm-4">
   <p>Christopher Essen</p>
-  <p>Dietician</p>
-  <p>hgfhgfhjfhfhffgh</p>
+  <p>Dietitian</p>
+  <p>Experience: 7years</p>
 </div>
 <div class="third col-sm-4">
   <p>Consultation time: 8pm to 10pm</p>
@@ -159,7 +159,7 @@
 <div class="second col-sm-4">
   <p>Jude walker</p>
   <p>Registered Nurse</p>
-  <p>hgfhgfhjfhfhffgh</p>
+  <p>Experience: 5years</p>
 </div>
 <div class="third col-sm-4">
   <p>Consultation time: 10pm to 12am</p>
@@ -174,7 +174,7 @@
 <div class="second col-sm-4">
   <p>Dywane Thompson</p>
   <p>Medical Doctor</p>
-  <p>hgfhgfhjfhfhffgh</p>
+<p>Experience: 10years</p>
 </div>
 <div class="third col-sm-4">
   <p>Consultation time: 12am to 2am</p>
@@ -189,7 +189,7 @@
 <div class="second col-sm-4">
   <p>Alexis Bush</p>
   <p>Dietician</p>
-  <p>hgfhgfhjfhfhffgh</p>
+  <p>Experience: 6years</p>
 </div>
 <div class="third col-sm-4">
   <p>Consultation time: 2am to 4am</p>
@@ -204,7 +204,7 @@
 <div class="second col-sm-4">
   <p>Kim Sang Sung</p>
   <p>Medical Doctor</p>
-  <p>hgfhgfhjfhfhffgh</p>
+ <p>Experience: 12years</p>
 </div>
 <div class="third col-sm-4">
   <p>Consultation time: 4am to 8am</p>
