--- a/patientinfo.html
+++ b/patientinfo.html
@@ -81,8 +81,7 @@
         </fieldset>
         
 <fieldset>
-  <label 
-          <input placeholder="Your Email Address" type="file" tabindex="2" required>
+          <input type="file" tabindex="2" required>
         </fieldset>
 
          <fieldset>
