--- a/patientinfo.html
+++ b/patientinfo.html
@@ -71,7 +71,9 @@
         <fieldset>
           <input placeholder="Your name" type="text" tabindex="1" required autofocus>
         </fieldset>
-
+<fieldset>
+          <input placeholder="Consultant name" type="text" tabindex="1" required autofocus>
+        </fieldset>
         <fieldset>
           <input placeholder="Your Email Address" type="email" tabindex="2" required>
         </fieldset>
@@ -84,9 +86,6 @@
           <input type="file" tabindex="2" required>
         </fieldset>
 
-         <fieldset>
-          <button class="box__button" type="submit">Upload</button>
-        <fieldset>
           <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
         </fieldset>
 
