worked on the hero

--- a/index.html
+++ b/index.html
@@ -325,17 +325,14 @@
             />
           </div>
 
-          <div class="col-sm-4">
+          <div class="col-sm-4 f-link">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
             <p>
               <a class="nav-link" href="blog.html">Blog</a>
             </p>
             <p>
-              <a class="nav-link" href="services.html">Find a consultant</a>
-            </p>
-            <p>
-              <a class="nav-link" href="faq.html">FAQ</a>
+              <a class="nav-link" href="services.html">FAQ</a>
             </p>
             <p>
               <a class="nav-link" href="about.html">About</a>
