--- a/services.html
+++ b/services.html
@@ -73,8 +73,9 @@
   <p>Experience: 5years</p>
 </div>
 <div class="third col-sm-4">
-  <button id="myButton" class="submit-button">book</button>
+  <p>Consultation time: 8am to 12pm</p>
   <p>Consultation fee: $5.99</p>
+   <button id="myButton" class="submit-button">book</button>
 </div>
 </div>
 <div class="doc row">
@@ -87,8 +88,10 @@
   <p>Experience: 8years</p>
 </div>
 <div class="third col-sm-4">
+  <p>Consultation time: 12pm to 2pm</p>
+ 
+  <p>Consultation fee: $6.99</p> 
   <button id="myButton" class="submit-button">book</button>
-  <p>Consultation fee: $5.99</p>
 </div>
 </div>
 <div class="doc row">
@@ -101,8 +104,9 @@
   <p>Experience: 10years</p>
 </div>
 <div class="third col-sm-4">
+  <p>Consultation time: 2pm to 4pm</p>
   <button id="myButton" class="submit-button">book</button>
-  <p>Consultation fee: $5.99</p>
+  <p>Consultation fee: $4.99</p>
   <button>book</button>
 </div>
 </div>
@@ -116,8 +120,10 @@
   <p>Experience: 4years</p>
 </div>
 <div class="third col-sm-4">
+  <p>Consultation time: 4pm to 6pm</p>
+ 
+  <p>Consultation fee: $5.99</p> 
   <button id="myButton" class="submit-button">book</button>
-  <p>Consultation fee: $5.99</p>
 </div>
 </div>
 <div class="doc row">
@@ -145,8 +151,10 @@
   <p>Experience: 7years</p>
 </div>
 <div class="third col-sm-4">
+  <p>Consultation time: 8pm to 10pm</p>
+ 
+  <p>Consultation fee: $7.99</p> 
   <button id="myButton" class="submit-button">book</button>
-  <p>Consultation fee: $5.99</p>
 </div>
 </div>
 <div class="doc row">
@@ -159,8 +167,10 @@
   <p>Experience: 5years</p>
 </div>
 <div class="third col-sm-4">
+  <p>Consultation time: 10pm to 12pm</p>
+  
+  <p>Consultation fee: $9.99</p>
   <button id="myButton" class="submit-button">book</button>
-  <p>Consultation fee: $5.99</p>
 </div>
 </div>
 <div class="doc row">
@@ -188,7 +198,7 @@
   <p>Experience: 6years</p>
 </div>
 <div class="third col-sm-4">
-  <button id="myButton" class="submit-button">book</button>
+  <p>Consultation time: 2am to 4am</p>
   <p>Consultation fee: $5.99</p>
   <button>book</button>
 </div>
@@ -203,8 +213,10 @@
  <p>Experience: 12years</p>
 </div>
 <div class="third col-sm-4">
+  <p>Consultation time: 4am to 8am</p>
+   <p>Consultation fee: $7.99</p>
   <button id="myButton" class="submit-button">book</button>
-  <p>Consultation fee: $5.99</p>
+ 
 </div>
 </div>
 </div>
