made testimonial responsive

--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
     </div>
 
     <div class="row testimonials_row">
-      <section id="testimonials_carousel">
+      <section class="testimonials_carousel">
         <div
-          id="testimonial-carousel"
+          id="testimonial-carousel1"
           class="carousel slide"
           data-bs-ride="false">
           <div class="carousel_in carousel-inner">
@@ -253,16 +253,16 @@
           </div>
         </div>
       </section>
-      <section id="testimonials_carousel">
+      <section class="testimonials_carousel carousel_section2">
         <div
-          id="testimonial-carousel"
+          id="testimonial-carousel2"
           class="carousel slide"
           data-bs-ride="false"
           >
-          <div class="carousel_in carousel-inner">
+          <div class="carousel_in carousel-inner inner_carousel2">
             <div class="carousel_text carousel-item active">
               <i class="fa-solid fa-quote-left"></i>
-              <p class="testimonial-text">
+              <p class="testimonial-text test_text2">
                 It was a wonderful experience on this site. Very understandable,
                 easily accessible, and knowledge platform. One of the consultants,
                 explained everything that was confusing to me via the site. So
@@ -281,12 +281,12 @@
           </div>
         </div>
       </section>
-      <section id="testimonials_carousel">
+      <section class="testimonials_carousel">
         <div
-          id="testimonial-carousel"
+          id="testimonial-carousel3"
           class="carousel slide"
           data-bs-ride="false">
-          <div class="carousel_in carousel-inner">
+          <div class="carousel_in carousel-inner inner_carousel3">
             <div class="carousel_text carousel-item active">
               <i class="fa-solid fa-quote-left"></i>
               <p class="testimonial-text">
