made homepage responsive

--- a/index.html
+++ b/index.html
@@ -125,10 +125,8 @@
       <div class="first"><h1>MISSION</h1></div>
       <div class="second">
         <h2>
-          Our mission is to make quality healthcare easily accessible to expectant and postpartum moms right on thier digital devices. In alignment with the third goal of SDGs we aim 
-          to contribute to the reduction in healthcare wait time, lack of access to 
-          personal health records and ultimately the high rate of maternal mortality by providing a platform of verfied, carefully selected local and international doctors and 
-          dieticians/nutritionists for expactant and postpartum moms to get fast medical and dietary consultations and second opinions
+          Our mission is to make quality healthcare easily accessible to expectant and postpartum moms right on thier digital devices by providing a platform of verfied, carefully selected local and international doctors and 
+          dieticians/nutritionists for expactant and postpartum moms to get fast medical and dietary consultations and second opinions.
         </h2>
       </div>
     </div>
