made contact page reponsive

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 
      <div class="contact-container">  
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-sm-6 form">
       <form id="contact" action="" method="post">
 
           <h1>Get In Touch</h1><br>
